# trading-research-app

./: .gitignore  AGENTS.md  IMPLEMENTATION_JOURNAL.md  PLAN.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: exceptions.py  migrations.py  session.py
backend/app/frontend/: app.js  index.html  styles.css
backend/app/providers/: __init__.py  calendar.py  llm.py  news.py  (+3 more)
backend/docs/: architecture.md  backtesting_contract_alignment.md  backtesting_service.md
backend/migrations/: README  env.py  script.py.mako
backend/scripts/: compact_strategy_hypotheses.py  distill_learning_memory.py  prune_learning_history.py
backend/tests/: conftest.py  test_agent_planner.py  test_agent_tools.py  test_ai_agent.py  test_architecture.py  test_autonomous_position_management.py  test_backtesting_provider_integration.py  test_bootstrap.py  test_bot_chat.py  test_calendar.py  test_chat_conversations.py  test_event_dispatch.py  test_health.py  test_ibkr_proxy_provider.py  test_ibkr_realtime_client.py  test_intermarket_context.py  test_knowledge_claims.py  test_learning_history_retention.py  test_learning_loop.py  test_learning_workflows.py  test_macro_indicators.py  test_market_analysis.py  test_mstr_context.py  test_news.py  test_opportunity_discovery.py  test_position_lifecycle.py  test_relevance_engine.py  test_risk_budget.py  test_scheduler.py  test_skills.py  test_startup_migrations.py  test_strategies.py  test_strategy_catalog.py  test_strategy_history_compaction.py  test_ticker_trace.py
(+176 files in other folders)
